# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  test.rest
assets/: README.md
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  index.html  nonce.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
