[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
#把自己的项目的许可声明为MIT
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_yaml = "0.9.34"
